# stagcrest

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html
.github/workflows/: ci.yml
assets/shaders/: outline.wgsl  voxel.wgsl
crates/stagcrest-app/: Cargo.toml
crates/stagcrest-app/src/: block_icons.rs  block_outline.rs  debug_overlay.rs  game.rs  lib.rs  loading.rs  main.rs  menu.rs  pause.rs  player.rs  targeting.rs  terrain_queue.rs  ui.rs  wasm_gpu.rs
crates/stagcrest-app/src/inventory/: hotbar.rs  input.rs  mod.rs  screen.rs  state.rs
crates/stagcrest-circuit/: Cargo.toml
crates/stagcrest-circuit/src/: event.rs  init.rs  lib.rs  node.rs  world.rs
crates/stagcrest-circuit/src/eval/: delay.rs  inverter.rs  mod.rs  output.rs  repeater.rs  source.rs  switch.rs  sync.rs  wire.rs
crates/stagcrest-mesh/: Cargo.toml
crates/stagcrest-mesh/src/: block_model.rs  lib.rs
crates/stagcrest-mod-host/: Cargo.toml
crates/stagcrest-mod-host/src/: atlas.rs  block_tints.rs  colormap.rs  dust_visual.rs  host.rs  lib.rs  mount_placement.rs  registry.rs  repeater_placement.rs  resourcepack.rs  torch_placement.rs  worldgen.rs
crates/stagcrest-mod-host/src/assets/: fs.rs  http.rs  mod.rs
crates/stagcrest-mod-host/src/models/: mod.rs  mount.rs  repeater.rs  torch.rs
crates/stagcrest-mod-host/src/runtime/: memory.rs  mod.rs  wasmi.rs
crates/stagcrest-mod-host/src/worldgen/: biome.rs  caves.rs  climate.rs  config.rs  features.rs  generator.rs  mod.rs  occupancy.rs  seed.rs  test_fixtures.rs  trees.rs
crates/stagcrest-mod-host/src/worldgen/noise/: mod.rs
crates/stagcrest-mod-host/src/worldgen/terrain/: chunk.rs  column.rs  density.rs  elevation.rs  mod.rs  sky_islands.rs
crates/stagcrest-mod-sdk/: Cargo.toml
crates/stagcrest-mod-sdk/src/: lib.rs  wasm.rs
crates/stagcrest-protocol/: Cargo.toml
crates/stagcrest-protocol/src/: block_model.rs  lib.rs
crates/stagcrest-redstone/: Cargo.toml
crates/stagcrest-redstone/src/: lib.rs
crates/stagcrest-render/: Cargo.toml
crates/stagcrest-render/src/: lib.rs  outline.rs  plugin.rs  voxel_material.rs
crates/stagcrest-world/: Cargo.toml
crates/stagcrest-world/src/: chunk.rs  lib.rs  raycast.rs  world.rs
mods/: mods.toml
mods/stagcrest-core/: Cargo.toml
mods/stagcrest-core/src/: content.rs  lib.rs  worldgen.rs
public/: _headers  web-init.js
resourcepacks/: resourcepacks.toml.example  resourcepacks.web.toml.example
scripts/: build-core-mod.sh  build-web-release.sh  prepare-web-resourcepack.sh
