[package]
name = "stagcrest-mod-host"
version.workspace = true
edition.workspace = true

[dependencies]
stagcrest-protocol.workspace = true
stagcrest-world.workspace = true
stagcrest-mod-sdk.workspace = true
wasmi = "0.32"
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
tracing.workspace = true
image.workspace = true
noise.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-net = "0.6"
